--- a/Captcha.html
+++ b/Captcha.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,67 +7,58 @@
     <title>Growing Flowers with CAPTCHA</title>
     <style>
         body {
-            background-color: #87CEEB; /*Sky blue background */
+            background-color: #87CEEB;
             display: flex;
             justify-content: center;
-            align-items: flex-end; /* Align items to the bottom */
+            align-items: flex-end;
             height: 100vh;
             margin: 0;
-            overflow: hidden; /* Prevent scrollbars from appearing */
+            overflow: hidden;
             position: relative;
         }
         .ground {
             position: absolute;
             bottom: 0;
-            height: 20%; /* Height of the ground */
+            height: 20%;
             width: 100%;
-            background-color: #8B4513; /* Brown color for the ground */
+            background-color: #8B4513;
         }
         .flower {
             position: absolute;
-            bottom: 20%; /* Start above the ground */
-            opacity: 0; /* Start invisible */
-            transform: scale(0); /* Start small */
-            animation: grow 3s ease-in-out infinite; /* Animation for growing */
-            font-size: 6rem; /* Increased size of the flowers */
+            bottom: 20%;
+            opacity: 0;
+            transform: scale(0);
+            animation: grow 3s ease-in-out infinite;
+            font-size: 6rem;
         }
-        /* Keyframes for flower growth */
         @keyframes grow {
-            0% {
-                opacity: 0;
-                transform: scale(0);
-            }
-            50% {
-                opacity: 1; /* Become visible */
-                transform: scale(1.2); /* Slightly larger */
-            }
-            100% {
-                opacity: 0; /* Fade out */
-                transform: scale(0); /* Shrink back */
-            }
+            0% { opacity: 0; transform: scale(0); }
+            50% { opacity: 1; transform: scale(1.2); }
+            100% { opacity: 0; transform: scale(0); }
         }
-        /* Positioning flowers at different locations */
         .flower1 { left: 10%; animation-delay: 0s; }
         .flower2 { left: 30%; animation-delay: 0.5s; }
         .flower3 { left: 50%; animation-delay: 1s; }
         .flower4 { left: 70%; animation-delay: 1.5s; }
         .flower5 { left: 90%; animation-delay: 2s; }
-        /* CAPTCHA container */
+
         .captcha-container {
             position: absolute;
-            top: 40%; /* Center vertically */
-            left: 50%; /* Center horizontally */
-            transform: translate(-50%, -50%); /* Center the box */
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             text-align: center;
-            z-index: 1; /* Ensure it is above the flowers */
-            background-color: rgba(255, 255, 255, 0.8); /* Light background for visibility */
+            z-index: 1;
+            background-color: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
-        .captcha {
-            font-size: 2rem;
+        .captcha-img {
             margin: 10px 0;
+            width: 200px;
+            height: 70px;
+            border: 1px solid #ccc;
         }
         input[type="text"] {
             padding: 10px;
@@ -85,50 +77,61 @@
             color: white;
             cursor: pointer;
         }
-        button:hover {
-            background-color: #0056b3;
-        }
-        /* Monkey hanging from the CAPTCHA box */
+        button:hover { background-color: #0056b3; }
+
         .monkey {
             position: absolute;
-            top: -30px; /* Position above the box */
-            left: 50%; /* Center horizontally */
-            transform: translateX(-50%); /* Center the monkey */
-            font-size: 3rem; /* Size of the monkey */
+            top: -30px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 3rem;
         }
     </style>
 </head>
 <body>
 
     <div class="ground"></div>
-    
-    <!-- Flowers -->
+
     <div class="flower flower1">🌸</div>
     <div class="flower flower2">🌼</div>
     <div class="flower flower3">🌻</div>
     <div class="flower flower4">🌷</div>
     <div class="flower flower5">🌺</div>
 
-    <!-- CAPTCHA Container -->
     <div class="captcha-container">
-        <div class="captcha">ABCD12</div> <!-- Static CAPTCHA for demonstration -->
+        <img id="captchaImage" class="captcha-img" src="captcha.png" alt="CAPTCHA">
+        <br>
         <label for="captcha-input">Enter CAPTCHA:</label>
         <input type="text" id="captcha-input" placeholder="Enter CAPTCHA">
         <button onclick="validateCaptcha()">Submit</button>
-        <div class="monkey">🐒</div> <!-- Monkey emoji hanging from the box -->
+        <p id="captchaMessage"></p>
+        <div class="monkey">🐒</div>
     </div>
 
     <script>
-        function validateCaptcha() {
-            const input = document.getElementById('captcha-input').value;
-            const captcha = 'ABCD12'; // Static CAPTCHA for demonstration
-            if (input === captcha) {
-                alert('CAPTCHA validated successfully!');
-            } else {
-                alert('Invalid CAPTCHA. Please try again.');
-            }
-        }
+    function validateCaptcha() {
+        const input = document.getElementById('captcha-input').value;
+
+        fetch(`/submit?captchaInput=${encodeURIComponent(input)}`)
+            .then(response => response.json())
+            .then(data => {
+                alert(data.message);
+
+                if (data.success) {
+                    // Redirect to the Rickroll link if the CAPTCHA is correct
+                    window.location.href = "https://youtu.be/dQw4w9WgXcQ?si=wBaquQ6iFuAvd2JS";
+                } else {
+                    // Wait for 1 second, then reload the page if CAPTCHA is incorrect
+                    setTimeout(() => {
+                        window.location.reload();
+                    }, 1000);
+                }
+            })
+            .catch(error => console.error("Error:", error));
+    }
     </script>
+
+
 
 </body>
 </html>
